# rules_agda

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  agda.bzl  agda.nix  agda_toolchain.bzl
testing/: BUILD.bazel  testing.agda-lib
