load("agda_toolchain.bzl", "agda_toolchain_info", "AGDA_TOOLCHAIN", "AGDA_TOOLCHAIN_TYPE")

toolchain_type(
    name = AGDA_TOOLCHAIN_TYPE,
    visibility = ["//visibility:public"],
)

agda_toolchain_info(
    name = "agda-nixos-toolchain-info",
    compiler = "@agda//:bin/agda"
)

toolchain(
    name = "agda-nixos-toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:x86_64",
    ],
    toolchain = ":agda-nixos-toolchain-info",
    toolchain_type = AGDA_TOOLCHAIN,
)
