load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "7aee35c95251c1751e765f7da09c3bb096d41e6d6dca3c72544781a5573be4aa",
    strip_prefix = "rules_nixpkgs-0.8.0",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/v0.8.0.tar.gz"],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")
rules_nixpkgs_dependencies()
load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl",
     "nixpkgs_local_repository",
     "nixpkgs_git_repository",
     "nixpkgs_package",
    )

nixpkgs_git_repository(
    name = "nixpkgs",
    revision = "22.05", # Any tag or commit hash
    sha256 = "" # optional sha to verify package integrity!
)

nixpkgs_package(
    name = "agda",
    attribute_path = "agda",
    repository = "@nixpkgs",
)

register_toolchains(
    "//:agda-nixos-toolchain",
)

nixpkgs_package(
    name = "agda-test",
    nix_file_deps = ["//:agda.bzl", "//:agda_toolchain.bzl", "//:a.agda"],
    nix_file = "//:agda.nix",
    repository = "@nixpkgs",
)